# agentz

./: .gitignore  README.md  pyproject.toml
agentz/: utils.py
agentz/agent/: agent_base.py  base.py  registry.py
agentz/agents/: base.py  registry.py
agentz/artifacts/: __init__.py
agentz/configuration/: __init__.py  base.py  data_science.py
agentz/context/: __init__.py  behavior_profiles.py  context.py  conversation.py  engine.py  global_memory.py  persist_process.py  pipeline_context.py
agentz/flow/: __init__.py  context.py  decorators.py  executor.py  iteration.py  orchestration.py  patterns.py  runtime_objects.py  step.py
agentz/llm/: llm_setup.py
agentz/memory/: behavior_profiles.py  conversation.py  task_memory.py
agentz/profiles/: agent_base.py  base.py  registry.py
agentz/reporting/: run_reporter.py
agentz/runner/: __init__.py  executor.py  iteration.py  patterns.py  tracker.py
agentz/tools/: __init__.py
agentz/utils/: __init__.py  config.py  helpers.py  logging.py  parsers.py
examples/: base_test.py  data_science.py  data_science_advanced.py  data_science_config.py  data_science_memory.py  simple.py  simple_browser.py  simple_chrome.py  simple_notion.py  web_searcher.py
gui/: app.py  streaming_printer.py
gui2/: app.py  streaming_printer.py
pipelines/: base.py  data_scientist.py  data_scientist2.py  data_scientist_memory.py  debugging_pipeline.py  flow_runner.py  simple.py  simple_browser.py  simple_chrome.py  simple_notion.py  vanilla_chat.py  vanilla_chat_persistent.py  web_searcher.py
tests/: test_conversation_state_runtime.py
(+101 files in other folders)
